# Voxterra

./: CLAUDE.md  Cargo.toml
crates/vox-app/: Cargo.toml
crates/vox-app/src/: main.rs
crates/vox-core/: Cargo.toml
crates/vox-core/src/: block.rs  chunk.rs  coords.rs  lib.rs  light.rs  raycast.rs  registry.rs  storage.rs  streaming.rs  time.rs  world.rs
crates/vox-mesh/: Cargo.toml
crates/vox-render/: Cargo.toml
crates/vox-worldgen/: Cargo.toml
docs/decisions/: 0001-custom-engine-rust-wgpu.md  0002-floating-origin-rendering.md  0003-texture-array.md  0004-light-storage.md  0005-skylight-heightmap.md  0006-mesh-light-snapshot.md  0007-daynight-celestial-model.md  03-blocks-interaction-textures.md
docs/milestones/: 00-spinning-chunk.md  01-real-chunk-system.md  02-infinite-world.md  03-blocks-interaction-textures.md  04-block-light.md  05-skylight.md  06-smooth-lighting-ao.md  07-day-night.md
docs/notes/: code-audit-2026-07.md  skylight-edit-relight-bug.md
world/chunks/: c.-1.-1.-1.vxc  c.-1.-1.0.vxc  c.-1.-1.1.vxc  c.-1.-1.2.vxc  c.-1.-1.3.vxc  c.-1.-1.4.vxc  c.-1.-2.0.vxc  c.-1.-2.1.vxc  c.-1.-2.2.vxc  c.-1.-2.3.vxc  c.-1.-3.0.vxc  c.-1.-3.1.vxc  c.-1.-4.1.vxc  c.-1.-4.2.vxc  c.-1.0.-1.vxc  c.-1.0.0.vxc  c.-1.0.1.vxc  c.-1.0.2.vxc  c.-1.0.22.vxc  c.-1.0.23.vxc  c.-1.0.3.vxc  c.-1.0.4.vxc  c.-1.1.0.vxc  c.-1.1.1.vxc  c.-1.1.2.vxc  c.-1.1.22.vxc  c.-2.-1.0.vxc  c.-2.-1.1.vxc  c.-2.-1.2.vxc  c.-2.-1.3.vxc  c.-2.-2.2.vxc  c.-2.-2.3.vxc  c.-2.0.0.vxc  c.-2.0.1.vxc  c.-2.0.22.vxc  c.-2.0.23.vxc  c.-2.1.22.vxc  c.0.-1.-1.vxc  c.0.-1.0.vxc  c.0.-1.1.vxc  (+99 more)
(+6 files in other folders)
