[workspace]
resolver = "2"
members = [
    "crates/vox-core",
    "crates/vox-mesh",
    "crates/vox-worldgen",
    "crates/vox-render",
    "crates/vox-app",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1"

[profile.dev]
opt-level = 1          # debug builds fast enough to actually run

[profile.dev.package."*"]
opt-level = 3          # dependencies always optimized